# Twitter-Media-Master

./: .gitignore  README.md  final_tweets_for_review.md  pyproject.toml
knowledge/: products.json
src/ettin_entertainment_twitter_marketing_automation/: crew.py  main.py
src/ettin_entertainment_twitter_marketing_automation/config/: agents.yaml  tasks.yaml
src/ettin_entertainment_twitter_marketing_automation/tools/: custom_tool.py
