[project]
name = "ettin_entertainment_twitter_marketing_automation"
version = "0.1.0"
description = "ettin_entertainment_twitter_marketing_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.0"
]

[project.scripts]
ettin_entertainment_twitter_marketing_automation = "ettin_entertainment_twitter_marketing_automation.main:run"
run_crew = "ettin_entertainment_twitter_marketing_automation.main:run"
train = "ettin_entertainment_twitter_marketing_automation.main:train"
replay = "ettin_entertainment_twitter_marketing_automation.main:replay"
test = "ettin_entertainment_twitter_marketing_automation.main:test"
run_with_trigger = "ettin_entertainment_twitter_marketing_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
